2005-03-31  Chris Toshok  <toshok@ximian.com>

	* DebuggingService.cs: track BreakpointHandle api change, and use
	Runtime.DispatchService instead of Gtk.ThreadNotify.

	* DebuggerCommands.cs: use Runtime.* instead of
	ServiceManager.GetService(...)

	* DebuggerAttributeHandler.cs: same.
	
	* Gui/DebuggerStackTracePad.cs: same.

	* Gui/DebuggerStackVariablePad.cs: same.

	* Gui/DebuggerThreadPad.cs: same, and make this properly
	update-without-clearing-the-store, like the other pads.

2005-03-29  Chris Toshok  <toshok@ximian.com>

	* Gui/DebuggerVariablePad.cs: display "this" if we're in a method
	that has it.

	* Gui/DebuggerStackTracePad.cs: update the currently displayed
	rows instead of clearing the tree and adding every frame to cut
	down on flashing.

2005-03-29  Chris Toshok  <toshok@ximian.com>

	* Gui/DebuggerVariablePad.cs: make this a lot nicer.  we update
	entries now instead of clearing/re-adding everything.  also,
	display icons now.

	* DebugAttributeHandler.cs (DebugAttributeHandler.Rescan):
	actually add the attributes to our hashtables.
	(DebugAttributeHandler.EvaluateDebuggerDisplay): move this here.

2005-03-24  Chris Toshok  <toshok@ximian.com>

	* Gui/DebuggerStackTracePad.cs
	(DebuggerStackTracePad.UpdateDisplay): remove the
	CleanDisplay() here.
	(DebuggerStackTracePad.UpdateDisplay): and add one here.

2005-03-24  Chris Toshok  <toshok@ximian.com>
	
	* Gui/DebuggerStackTracePad.cs, Gui/DebuggerLocalsPad.cs,
	Gui/DebuggerThreadPad.cs, MonoDevelopDebugger.addin.xml: fix the
	pad ids.

2005-03-24  Chris Toshok  <toshok@ximian.com>

	* MonoDevelopDebugger.addin.xml: Change all the namespaces to
	MonoDevelop.Debugger.*

	* Gui/DebuggerVariablePad.cs
	(DebuggerVariablePad.GetDebuggerTypeProxyAttribute,
	DebuggerVariablePad.GetDebuggerDisplayAttribute): make use of
	DebugAttributeHandler.

	* Makefile.am (FILES): add DebugAttributeHandler.cs

	* DebuggerCommands.cs (DebugProject.Run): rescan debugger
	attributes when we start a debugging session.
